<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NetMirror Companion by AK</string>
    <string name="accessibility_service_description">Automatically clicks Enter OTP input box and fills the 6-digit code in NetMirror TV.</string>
    <string name="tv_instruction">TV Companion &amp; Instant OTP Sync</string>
    <string name="otp_label">Current OTP Code</string>
    <string name="otp_placeholder">------</string>
    <string name="status_loading">Connecting to netmirror.gg/tv &amp; generating code...</string>
    <string name="status_waiting_dom">Retrieving live OTP digits...</string>
    <string name="status_ready">OTP ready! Launching NetMirror TV...</string>
    <string name="status_error">Could not detect OTP. Tap Refresh to retry.</string>
    <string name="btn_copy">Copy Code</string>
    <string name="btn_launch_app">Open NetMirror TV App</string>
    <string name="btn_launch_now">Launch Now (0s)</string>
    <string name="btn_pause">Cancel</string>
    <string name="btn_resume">Resume</string>
    <string name="btn_refresh">Refresh</string>
    <string name="copied_toast">OTP copied to clipboard!</string>
    <string name="launch_error_toast">NetMirror TV app not found on this device. Code copied to clipboard!</string>
    <string name="title_webview">Web View (Cloudflare / Live Page)</string>
    <string name="footer_hint">When NetMirror TV opens, click \'Enter OTP\' box and enter this code.</string>
</resources>
